{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "833fe45d-b369-4bb8-bf1f-36d09d6d28c6",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "acb44d53-f8b0-407e-84c1-0c2b7c888120",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8b758df0-8d06-4501-9de8-a717d567980c",
                    "path": "<Joystick>/stick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}